tests/snapshots/jsonl__jsonl_compact_default.snap
---
source: tests/jsonl.rs
expression: out
---
1: {"email":"alice@example.com","id":1,"name":"Alice"}2: {"email":"bob@example.com","id":2,"name":"Bob"}3: {"email":"charlie@example.com","id":3,"name":"Charlie"}4: {"email":"diana@example.com","id":4,"name":"Diana"}5: {"email":"eve@example.com","id":5,"name":"Eve"}
