tests/snapshots/jsonl__jsonl_skips_empty_lines.snap
---
source: tests/jsonl.rs
expression: out
---
1:   {
    "id": 1,
    "name": "Alice"
  }
…
3:   {
    "id": 2,
    "name": "Bob"
  }
…
5:   {
    "id": 3,
    "name": "Charlie"
  }
