tests/snapshots/jsonl__jsonl_truncation_default.snap
---
source: tests/jsonl.rs
expression: out
---
 1:   {
    "id": 0
  }
 2:   {
    "id": 1
  }
…
24:   {
    "id": 23
  }
25:   {
    "id": 24
  }
26:   {
    "id": 25
  }
27:   {
    "id": 26
  }
…
49:   { … }
50:   {
    "id": 49
  }
…
